--- a/style.css
+++ b/style.css
@@ -72,15 +72,21 @@ body{
     right: 10%;
     top: 10%;
     display: flex;
+    color: #E9E5D6;
     justify-content: flex-end;
 }
 
 .heading-icons img{
     height: auto;
-    width: 50px;
-    filter: invert(1);
-    padding: 5px;
+    width: 80px;
+    padding: 10px;
+    transition: 0.8s ease;
+    float: right;
 }   
+
+.heading-icons img:hover {
+    transform: scale(1.2);  
+    }
 
 .heading-text-container{
     width: 270px;
@@ -398,39 +404,39 @@ p {
     display: flex;
     flex-direction: column;
     text-align: center;
+    text-decoration: none;
     height: fit-content;
     padding: 10px;
-    /* border: green 2px solid; */
 }
 
-/*  
 .for-more-icons p {
+    display: block;    
     font-family: 'Roboto', sans-serif;
     font-size: 14px;
     font-weight: 700;
     line-height: 13px;
     text-transform: uppercase;
     text-align: center;
- } */
+    margin: 10px;
+}
 
 .for-more-icons{
     display: flex;
     flex-direction: row;
-    align-items: center;
-    justify-content: space-around;
+    justify-content: center;
     width: 400px;
-    /* border: blueviolet 2px solid; */
+    padding: 5px;
 }      
 
 .for-more-icons img{
+    justify-content: space-evenly;
     height: auto;
     width: 70px;
-    padding: 10px;
-    margin: 10px;
-    text-align: center;
+    padding: 1px;
+    margin: 25px;
     transition: 0.8s ease;
     float: right; 
-    /* border: #EF5E60 2px solid; */
+    filter: invert(1);
 }
 
 .for-more-icons img:hover {
